[package]
name = "taskbar-customizer"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.51", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Dwm",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
] }
tray-item = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"